# minivideoservice

./: manage.py  pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
mediaservice/: asgi.py  settings.py  wsgi.py
templates/: index.html  view_image.html  view_video.html
